[gd_scene load_steps=9 format=3 uid="uid://oisg30whygac"]

[ext_resource type="Script" path="res://Scene/DialogScene.gd" id="1_y2kxs"]
[ext_resource type="Script" path="res://Scene/VideoStreamPlayer.gd" id="2_4caap"]
[ext_resource type="PackedScene" uid="uid://daf84icc03tyk" path="res://Scene/DialogicSystem/TextArea.tscn" id="3_4v5x7"]
[ext_resource type="PackedScene" uid="uid://dre5coms5pnx5" path="res://addons/DialogHelperTool/Game/Background/Background.tscn" id="5_ctygb"]
[ext_resource type="PackedScene" uid="uid://b4jnsyyw1ce7o" path="res://Scene/DialogicSystem/DialogManager.tscn" id="5_hx7hm"]
[ext_resource type="PackedScene" uid="uid://cpac1623kedeg" path="res://Scene/DialogicSystem/Person.tscn" id="5_jcndp"]
[ext_resource type="PackedScene" uid="uid://bxg7ilqhk1qw" path="res://Scene/DialogicSystem/AudioManager.tscn" id="7_dp16l"]
[ext_resource type="PackedScene" uid="uid://b3xycrlwc280n" path="res://Scene/DialogicSystem/ChoicesBlock.tscn" id="8_w8dfg"]

[node name="Control" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y2kxs")
fn = "res://Resources/Scene1/timelines/start.json"

[node name="DialogManager" parent="." instance=ExtResource("5_hx7hm")]
timeline = "res://timelines/testTimeline.json"
character_list = "res://Resources/Scene1/configs/characters.json"
background_list = "res://Resources/Scene1/configs/backgrounds.json"
videos_list = "res://Resources/Scene1/configs/videos.json"

[node name="AudioManager" parent="." instance=ExtResource("7_dp16l")]
resources = "res://Resources/Scene1/configs/sounds.json"

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 1
expand = true
script = ExtResource("2_4caap")

[node name="Background" parent="." instance=ExtResource("5_ctygb")]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="PersonLeft" parent="." instance=ExtResource("5_jcndp")]
layout_mode = 1
offset_right = -1407.0
mouse_filter = 2

[node name="PersonMiddleLeft" parent="." instance=ExtResource("5_jcndp")]
layout_mode = 1
offset_left = 384.0
offset_right = -959.0
mouse_filter = 2

[node name="PersonMiddle" parent="." instance=ExtResource("5_jcndp")]
layout_mode = 1
offset_left = 768.0
offset_right = 768.0
mouse_filter = 2

[node name="PersonMiddleRight" parent="." instance=ExtResource("5_jcndp")]
layout_mode = 1
offset_left = 1152.0
offset_right = 1152.0
mouse_filter = 2

[node name="PersonRight" parent="." instance=ExtResource("5_jcndp")]
layout_mode = 1
offset_left = 1536.0
offset_right = 1536.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.087
anchor_top = 0.688
anchor_right = 0.903
anchor_bottom = 0.919
offset_left = -167.04
offset_top = -743.04
offset_right = 186.24
offset_bottom = 87.48
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 30

[node name="TextArea" parent="MarginContainer" instance=ExtResource("3_4v5x7")]
clip_contents = true
custom_minimum_size = Vector2(1200, 250)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 8
mouse_filter = 1
charactersPerSecond = 100

[node name="ChoisesBlock" parent="." instance=ExtResource("8_w8dfg")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.735
anchor_right = 0.967
anchor_bottom = 0.672
offset_left = -0.200073
offset_right = -0.640137
offset_bottom = 0.239929

[connection signal="end" from="DialogManager" to="." method="_on_dialog_manager_end"]
[connection signal="personAnimation" from="DialogManager" to="." method="person_animation"]
[connection signal="personSource" from="DialogManager" to="." method="set_person_source"]
[connection signal="personVisible" from="DialogManager" to="." method="set_person_visible"]
[connection signal="playSound" from="DialogManager" to="." method="_on_dialog_manager_play_sound"]
[connection signal="playVideo" from="DialogManager" to="." method="_on_dialog_manager_play_video"]
[connection signal="resetCharacter" from="DialogManager" to="." method="_on_dialog_manager_reset_character"]
[connection signal="setBackground" from="DialogManager" to="." method="_on_dialog_manager_set_background"]
[connection signal="setBackgroundClickable" from="DialogManager" to="." method="_on_dialog_manager_set_background_clickable"]
[connection signal="showChoices" from="DialogManager" to="." method="_on_dialog_manager_show_choices"]
[connection signal="stopSound" from="DialogManager" to="." method="_on_dialog_manager_stop_sound"]
[connection signal="stopVideo" from="DialogManager" to="." method="_on_dialog_manager_stop_video"]
[connection signal="updateCharacter" from="DialogManager" to="." method="_on_dialog_manager_update_character"]
[connection signal="updateText" from="DialogManager" to="." method="_on_dialog_manager_update_text"]
[connection signal="finished" from="PanelContainer/VideoStreamPlayer" to="PanelContainer/VideoStreamPlayer" method="_on_finished"]
[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="event_reached" from="MarginContainer/TextArea" to="DialogManager" method="_on_text_area_event_reached"]
[connection signal="on_next" from="MarginContainer/TextArea" to="." method="_on_text_area_on_next"]
[connection signal="choiceClicked" from="ChoisesBlock" to="." method="_on_choices_block_choice_clicked"]
